# wg-tui

./: CLAUDE.md  Cargo.toml  INSTALL-LOCAL.md  LICENSE  README.md  build.rs
.github/workflows/: ci-cd.yaml  ci.yaml  publish.yaml
.sisyphus/: boulder.json
.sisyphus/notepads/tunnel-edit/: learnings.md
.sisyphus/plans/: edit-form-ui.md  tunnel-edit.md
scripts/: install.sh
src/: app.rs  error.rs  lib.rs  main.rs  types.rs  ui.rs  wireguard.rs
