[package]
name = "wg-tui"
version = "0.1.0"
edition = "2024"
description = "A terminal user interface for managing WireGuard VPN tunnels"
license = "MIT"
repository = "https://github.com/excoffierleonard/wg-tui"
keywords = ["wireguard", "vpn", "tui", "terminal", "network"]
categories = ["network-programming", "terminal-ui", "vpn"]
readme = "README.md"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.29.0"
thiserror = "2.0.17"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
