[package]
name = "wg-tui"
version = "0.1.8"
edition = "2024"
description = "A terminal user interface for managing WireGuard VPN tunnels"
repository = "https://github.com/excoffierleonard/wg-tui"
documentation = "https://docs.rs/wg-tui"
keywords = ["wireguard", "vpn", "tui", "terminal", "network"]
categories = ["network-programming", "gui"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
nix = { version = "0.30.1", features = ["user"] }
ratatui = "0.29.0"
thiserror = "2.0.17"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
