[package]
name = "wg-tui"
version = "0.2.0"
edition = "2024"
description = "A terminal user interface for managing WireGuard VPN tunnels"
repository = "https://github.com/excoffierleonard/wg-tui"
documentation = "https://docs.rs/wg-tui"
keywords = ["wireguard", "vpn", "tui", "terminal", "network"]
categories = ["network-programming", "gui"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
humansize = "2.1.3"
nix = { version = "0.31.1", features = ["user"] }
qrcode = "0.14.1"
ratatui = "0.30.0"
shellexpand = "3.1.1"
thiserror = "2.0.18"
which = "8.0.0"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
